docs-kits_versioned_docs/version-23.12/kits/Business Partner Kit/Software Development View/Gate Api/get-business-partners-output.api.mdx
---
id: get-business-partners-output
title: "Search business partners by an array of external IDs from the output stage"
description: "Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners."
sidebar_label: "Search business partners by an array of external IDs from the output stage"
hide_title: true
hide_table_of_contents: true
api: {"tags":["business-partner-controller"],"description":"Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners.","operationId":"getBusinessPartnersOutput","parameters":[{"name":"page","in":"query","description":"Number of page to get results from","required":false,"schema":{"minimum":0,"type":"string","default":"0"}},{"name":"size","in":"query","description":"Size of each page","required":false,"schema":{"maximum":100,"minimum":0,"type":"string","default":"10"}}],"requestBody":{"content":{"application/json":{"schema":{"type":"array","items":{"type":"string"}}}}},"responses":{"200":{"description":"The requested page of business partners","content":{"application/json":{"schema":{"type":"object","properties":{"totalElements":{"type":"integer","description":"Total number of all results in all pages","format":"int64"},"totalPages":{"type":"integer","description":"Total number pages","format":"int32"},"page":{"type":"integer","description":"Current page number","format":"int32"},"contentSize":{"type":"integer","description":"Number of results in the page","format":"int32"},"content":{"type":"array","description":"Collection of results in the page","items":{"required":["bpnA","bpnL","externalId","postalAddress"],"type":"object","properties":{"externalId":{"type":"string","description":"The identifier which uniquely identifies (in the internal system landscape of the sharing member) the business partner."},"nameParts":{"type":"array","description":"The list of name parts to accommodate the different number of name fields in different systems.","items":{"type":"string"}},"shortName":{"type":"string","description":"Abbreviated name or shorthand."},"identifiers":{"type":"array","description":"The list of identifiers of the business partner. Sorted and duplicates removed by the service.","items":{"required":["type","value"],"type":"object","properties":{"type":{"type":"string","description":"Technical key of the type to which this identifier belongs to"},"value":{"type":"string","description":"Value of the identifier"},"issuingBody":{"type":"string","description":"Body which issued the identifier"}},"description":"Identifier record for a business partner"}},"legalName":{"type":"string"},"legalForm":{"type":"string","description":"Technical key of the legal form."},"states":{"type":"array","description":"The list of (temporary) states of the business partner. Sorted and duplicates removed by the service.","items":{"required":["type"],"type":"object","properties":{"validFrom":{"type":"string","description":"Date since when the status is/was valid.","format":"date-time"},"validTo":{"type":"string","description":"Date until the status was valid, if applicable.","format":"date-time"},"type":{"type":"string","description":"The type of this specified status.","enum":["ACTIVE","INACTIVE"]},"description":{"type":"string","description":"Denotation of the status."}},"description":"A legal entity state indicates if the legal entity is active or inactive. This does not describe the relation between a sharing member and a business partner and whether they have active business, but it describes whether the legal entity is still operating."}},"classifications":{"type":"array","description":"The list of classifications of the business partner, such as a specific industry. Sorted and duplicates removed by the service.","items":{"type":"object","properties":{"type":{"type":"string","description":"Type of classification.","enum":["NACE","NAF","NAICS","SIC"]},"code":{"type":"string","description":"The identifier of the class belonging to the classification."},"value":{"type":"string","description":"The name of the class belonging to the classification."}},"description":"A legal entity classification is an assignment of the legal entity to an industry. It does not necessarily have to be the only industry the company is active in (see large companies operating in different industries). Multiple assignments to several industries are possible per classification type."}},"roles":{"type":"array","description":"Roles this business partner takes in relation to the sharing member. Sorted and duplicates removed by the service.","items":{"type":"string","enum":["SUPPLIER","CUSTOMER"]}},"postalAddress":{"type":"object","properties":{"addressType":{"type":"string","description":"Type of the address","enum":["LegalAndSiteMainAddress","LegalAddress","SiteMainAddress","AdditionalAddress"]},"physicalPostalAddress":{"type":"object","properties":{"geographicCoordinates":{"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"The exact location of the physical postal address in latitude, longitude, and altitude."},"country":{"type":"string","description":"The 2-digit country code of the physical postal address according to ISO 3166-1.","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"administrativeAreaLevel1":{"type":"string","description":"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."},"administrativeAreaLevel2":{"type":"string","description":"The name of the locally regulated secondary country subdivision of the physical postal address, such as county within a country."},"administrativeAreaLevel3":{"type":"string","description":"The name of the locally regulated tertiary country subdivision of the physical address, such as townships within a country."},"postalCode":{"type":"string","description":"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."},"city":{"type":"string","description":"The name of the city of the physical postal address, synonyms: town, village, municipality."},"district":{"type":"string","description":"The name of the district of the physical postal address which divides the city in several smaller areas."},"street":{"type":"object","properties":{"namePrefix":{"type":"string","description":"The street related information, which is usually printed before the official street name on an address label."},"additionalNamePrefix":{"type":"string","description":"The additional street related information, which is usually printed before the official street name on an address label."},"name":{"type":"string","description":"The name of the street."},"nameSuffix":{"type":"string","description":"The street related information, which is usually printed after the official street name on an address label."},"additionalNameSuffix":{"type":"string","description":"The additional street related information, which is usually printed after the official street name on an address label."},"houseNumber":{"type":"string","description":"The number representing the exact location of a building within the street."},"milestone":{"type":"string","description":"The number representing the exact location of an addressed object within a street without house numbers, such as within long roads."},"direction":{"type":"string","description":"The cardinal direction describing where the exit to the location of the addressed object on large highways / motorways is located, such as Highway 101 South."}},"description":"The street of the physical postal address, synonyms: road, avenue, lane, boulevard, highway"},"companyPostalCode":{"type":"string","description":"The company postal code of the physical postal address, which is sometimes required for large companies."},"industrialZone":{"type":"string","description":"The industrial zone of the physical postal address, designating an area for industrial development, synonym: industrial area."},"building":{"type":"string","description":"The alphanumeric identifier of the building addressed by the physical postal address."},"floor":{"type":"string","description":"The number of a floor in the building addressed by the physical postal address, synonym: level."},"door":{"type":"string","description":"The number of a door in the building on the respective floor addressed by the physical postal address, synonyms: room, suite."}},"description":"A physical postal address describes the physical location of an office, warehouse, gate, etc."},"alternativePostalAddress":{"type":"object","properties":{"geographicCoordinates":{"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"The exact location of the physical postal address in latitude, longitude, and altitude."},"country":{"type":"string","description":"The 2-digit country code of the physical postal address according to ISO 3166-1.","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"administrativeAreaLevel1":{"type":"string","description":"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."},"postalCode":{"type":"string","description":"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."},"city":{"type":"string","description":"The name of the city of the physical postal address, synonyms: town, village, municipality."},"deliveryServiceType":{"type":"string","description":"One of the alternative postal address types: P.O. box, private bag, boite postale.","enum":["PO_BOX","PRIVATE_BAG","BOITE_POSTALE"]},"deliveryServiceQualifier":{"type":"string","description":"The qualifier uniquely identifying the delivery service endpoint of the alternative postal address in conjunction with the delivery service number. In some countries for example, entering a P.O. box number, postal code and city is not sufficient to uniquely identify a P.O. box, because the same P.O. box number is assigned multiple times in some cities."},"deliveryServiceNumber":{"type":"string","description":"The number indicating the delivery service endpoint of the alternative postal address to which the delivery is to be delivered, such as a P.O. box number or a private bag number."}},"description":"An alternative postal address describes an alternative way of delivery for example if the goods are to be picked up somewhere else."}},"description":"Postal address of a business partner"},"bpnL":{"type":"string","description":"BPNL"},"bpnS":{"type":"string","description":"BPNS"},"bpnA":{"type":"string","description":"BPNA"},"createdAt":{"type":"string","description":"The date when the data record has been created.","format":"date-time"},"updatedAt":{"type":"string","description":"The date when the data record has been last updated.","format":"date-time"},"ownCompanyData":{"type":"boolean","description":"True if the sharing member declares itself as the owner of the business partner."}},"description":"Generic business partner output with external id"}}},"description":"Paginated collection of results"}}}},"400":{"description":"On malformed pagination request"}},"method":"post","path":"/api/catena/output/business-partners/search","servers":[{"url":"http://localhost:8081","description":"Generated server url"}],"jsonRequestBodyExample":["string"],"info":{"title":"Business Partner Data Management Gate","description":"A gate for a member to share business partner data with CatenaX","version":"4.1.0-SNAPSHOT"},"postman":{"name":"Search business partners by an array of external IDs from the output stage","description":{"content":"Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners.","type":"text/plain"},"url":{"path":["api","catena","output","business-partners","search"],"host":["{{baseUrl}}"],"query":[{"disabled":false,"description":{"content":"Number of page to get results from","type":"text/plain"},"key":"page","value":""},{"disabled":false,"description":{"content":"Size of each page","type":"text/plain"},"key":"size","value":""}],"variable":[]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
sidebar_class_name: "post api-method"
info_path: docs-kits/kits/Business Partner Kit/Software Development View/Gate Api/business-partner-data-management-gate
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import TabItem from "@theme/TabItem";

## Search business partners by an array of external IDs from the output stage



Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners.

<details style={{"marginBottom":"1rem"}} data-collapsed={false} open={true}><summary style={{}}><strong>Query Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"page","in":"query","description":"Number of page to get results from","required":false,"schema":{"minimum":0,"type":"string","default":"0"}}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"size","in":"query","description":"Size of each page","required":false,"schema":{"maximum":100,"minimum":0,"type":"string","default":"10"}}}></ParamsItem></ul></div></details><MimeTabs><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Request Body</strong><span style={{"opacity":"0.6"}}> array</span></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><li><div><strong>string</strong></div></li></ul></details></TabItem></MimeTabs><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

The requested page of business partners

</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"totalElements"} required={false} deprecated={undefined} schemaDescription={"Total number of all results in all pages"} schemaName={"int64"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"totalPages"} required={false} deprecated={undefined} schemaDescription={"Total number pages"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"page"} required={false} deprecated={undefined} schemaDescription={"Current page number"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"contentSize"} required={false} deprecated={undefined} schemaDescription={"Number of results in the page"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>content</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Collection of results in the page

</div><SchemaItem collapsible={false} name={"externalId"} required={false} deprecated={undefined} schemaDescription={"The identifier which uniquely identifies (in the internal system landscape of the sharing member) the business partner."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"nameParts"} required={false} deprecated={undefined} schemaDescription={"The list of name parts to accommodate the different number of name fields in different systems."} schemaName={"string[]"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"shortName"} required={false} deprecated={undefined} schemaDescription={"Abbreviated name or shorthand."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>identifiers</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The list of identifiers of the business partner. Sorted and duplicates removed by the service.

</div><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"Technical key of the type to which this identifier belongs to"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"value"} required={false} deprecated={undefined} schemaDescription={"Value of the identifier"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"issuingBody"} required={false} deprecated={undefined} schemaDescription={"Body which issued the identifier"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"legalName"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"legalForm"} required={false} deprecated={undefined} schemaDescription={"Technical key of the legal form."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The list of (temporary) states of the business partner. Sorted and duplicates removed by the service.

</div><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Date since when the status is/was valid."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Date until the status was valid, if applicable."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"The type of this specified status."} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"description"} required={false} deprecated={undefined} schemaDescription={"Denotation of the status."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>classifications</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The list of classifications of the business partner, such as a specific industry. Sorted and duplicates removed by the service.

</div><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"Type of classification."} schemaName={"string"} qualifierMessage={"**Possible values:** [`NACE`, `NAF`, `NAICS`, `SIC`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"code"} required={false} deprecated={undefined} schemaDescription={"The identifier of the class belonging to the classification."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"value"} required={false} deprecated={undefined} schemaDescription={"The name of the class belonging to the classification."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"roles"} required={false} deprecated={undefined} schemaDescription={"Roles this business partner takes in relation to the sharing member. Sorted and duplicates removed by the service."} schemaName={"string[]"} qualifierMessage={"**Possible values:** [`SUPPLIER`, `CUSTOMER`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>postalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Postal address of a business partner

</div><SchemaItem collapsible={false} name={"addressType"} required={false} deprecated={undefined} schemaDescription={"Type of the address"} schemaName={"string"} qualifierMessage={"**Possible values:** [`LegalAndSiteMainAddress`, `LegalAddress`, `SiteMainAddress`, `AdditionalAddress`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>physicalPostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

A physical postal address describes the physical location of an office, warehouse, gate, etc.

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The exact location of the physical postal address in latitude, longitude, and altitude.

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country code of the physical postal address according to ISO 3166-1."} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel2"} required={false} deprecated={undefined} schemaDescription={"The name of the locally regulated secondary country subdivision of the physical postal address, such as county within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel3"} required={false} deprecated={undefined} schemaDescription={"The name of the locally regulated tertiary country subdivision of the physical address, such as townships within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The name of the city of the physical postal address, synonyms: town, village, municipality."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"district"} required={false} deprecated={undefined} schemaDescription={"The name of the district of the physical postal address which divides the city in several smaller areas."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>street</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The street of the physical postal address, synonyms: road, avenue, lane, boulevard, highway

</div><SchemaItem collapsible={false} name={"namePrefix"} required={false} deprecated={undefined} schemaDescription={"The street related information, which is usually printed before the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"additionalNamePrefix"} required={false} deprecated={undefined} schemaDescription={"The additional street related information, which is usually printed before the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"The name of the street."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"nameSuffix"} required={false} deprecated={undefined} schemaDescription={"The street related information, which is usually printed after the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"additionalNameSuffix"} required={false} deprecated={undefined} schemaDescription={"The additional street related information, which is usually printed after the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"houseNumber"} required={false} deprecated={undefined} schemaDescription={"The number representing the exact location of a building within the street."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"milestone"} required={false} deprecated={undefined} schemaDescription={"The number representing the exact location of an addressed object within a street without house numbers, such as within long roads."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"direction"} required={false} deprecated={undefined} schemaDescription={"The cardinal direction describing where the exit to the location of the addressed object on large highways / motorways is located, such as Highway 101 South."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"companyPostalCode"} required={false} deprecated={undefined} schemaDescription={"The company postal code of the physical postal address, which is sometimes required for large companies."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"industrialZone"} required={false} deprecated={undefined} schemaDescription={"The industrial zone of the physical postal address, designating an area for industrial development, synonym: industrial area."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"building"} required={false} deprecated={undefined} schemaDescription={"The alphanumeric identifier of the building addressed by the physical postal address."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"floor"} required={false} deprecated={undefined} schemaDescription={"The number of a floor in the building addressed by the physical postal address, synonym: level."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"door"} required={false} deprecated={undefined} schemaDescription={"The number of a door in the building on the respective floor addressed by the physical postal address, synonyms: room, suite."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>alternativePostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

An alternative postal address describes an alternative way of delivery for example if the goods are to be picked up somewhere else.

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The exact location of the physical postal address in latitude, longitude, and altitude.

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country code of the physical postal address according to ISO 3166-1."} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The name of the city of the physical postal address, synonyms: town, village, municipality."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceType"} required={false} deprecated={undefined} schemaDescription={"One of the alternative postal address types: P.O. box, private bag, boite postale."} schemaName={"string"} qualifierMessage={"**Possible values:** [`PO_BOX`, `PRIVATE_BAG`, `BOITE_POSTALE`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceQualifier"} required={false} deprecated={undefined} schemaDescription={"The qualifier uniquely identifying the delivery service endpoint of the alternative postal address in conjunction with the delivery service number. In some countries for example, entering a P.O. box number, postal code and city is not sufficient to uniquely identify a P.O. box, because the same P.O. box number is assigned multiple times in some cities."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceNumber"} required={false} deprecated={undefined} schemaDescription={"The number indicating the delivery service endpoint of the alternative postal address to which the delivery is to be delivered, such as a P.O. box number or a private bag number."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"bpnL"} required={false} deprecated={undefined} schemaDescription={"BPNL"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"bpnS"} required={false} deprecated={undefined} schemaDescription={"BPNS"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"bpnA"} required={false} deprecated={undefined} schemaDescription={"BPNA"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"createdAt"} required={false} deprecated={undefined} schemaDescription={"The date when the data record has been created."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"updatedAt"} required={false} deprecated={undefined} schemaDescription={"The date when the data record has been last updated."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"ownCompanyData"} required={false} deprecated={undefined} schemaDescription={"True if the sharing member declares itself as the owner of the business partner."} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"totalElements\": 0,\n  \"totalPages\": 0,\n  \"page\": 0,\n  \"contentSize\": 0,\n  \"content\": [\n    {\n      \"externalId\": \"string\",\n      \"nameParts\": [\n        \"string\"\n      ],\n      \"shortName\": \"string\",\n      \"identifiers\": [\n        {\n          \"type\": \"string\",\n          \"value\": \"string\",\n          \"issuingBody\": \"string\"\n        }\n      ],\n      \"legalName\": \"string\",\n      \"legalForm\": \"string\",\n      \"states\": [\n        {\n          \"validFrom\": \"2023-11-02\",\n          \"validTo\": \"2023-11-02\",\n          \"type\": \"ACTIVE\",\n          \"description\": \"string\"\n        }\n      ],\n      \"classifications\": [\n        {\n          \"type\": \"NACE\",\n          \"code\": \"string\",\n          \"value\": \"string\"\n        }\n      ],\n      \"roles\": [\n        \"SUPPLIER\"\n      ],\n      \"postalAddress\": {\n        \"addressType\": \"LegalAndSiteMainAddress\",\n        \"physicalPostalAddress\": {\n          \"geographicCoordinates\": {\n            \"longitude\": 0,\n            \"latitude\": 0,\n            \"altitude\": 0\n          },\n          \"country\": \"UNDEFINED\",\n          \"administrativeAreaLevel1\": \"string\",\n          \"administrativeAreaLevel2\": \"string\",\n          \"administrativeAreaLevel3\": \"string\",\n          \"postalCode\": \"string\",\n          \"city\": \"string\",\n          \"district\": \"string\",\n          \"street\": {\n            \"namePrefix\": \"string\",\n            \"additionalNamePrefix\": \"string\",\n            \"name\": \"string\",\n            \"nameSuffix\": \"string\",\n            \"additionalNameSuffix\": \"string\",\n            \"houseNumber\": \"string\",\n            \"milestone\": \"string\",\n            \"direction\": \"string\"\n          },\n          \"companyPostalCode\": \"string\",\n          \"industrialZone\": \"string\",\n          \"building\": \"string\",\n          \"floor\": \"string\",\n          \"door\": \"string\"\n        },\n        \"alternativePostalAddress\": {\n          \"geographicCoordinates\": {\n            \"longitude\": 0,\n            \"latitude\": 0,\n            \"altitude\": 0\n          },\n          \"country\": \"UNDEFINED\",\n          \"administrativeAreaLevel1\": \"string\",\n          \"postalCode\": \"string\",\n          \"city\": \"string\",\n          \"deliveryServiceType\": \"PO_BOX\",\n          \"deliveryServiceQualifier\": \"string\",\n          \"deliveryServiceNumber\": \"string\"\n        }\n      },\n      \"bpnL\": \"string\",\n      \"bpnS\": \"string\",\n      \"bpnA\": \"string\",\n      \"createdAt\": \"2023-11-02\",\n      \"updatedAt\": \"2023-11-02\",\n      \"ownCompanyData\": true\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"400"} value={"400"}><div>

On malformed pagination request

</div><div></div></TabItem></ApiTabs></div>
      