docs-kits_versioned_docs/version-24.05/kits/Business Partner Kit/Software Development View/Gate Api/get-business-partners-output.api.mdx
---
id: get-business-partners-output
title: "Search business partners by an array of external IDs from the output stage"
description: "Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners."
sidebar_label: "Search business partners by an array of external IDs from the output stage"
hide_title: true
hide_table_of_contents: true
api: {"tags":["business-partner-controller"],"description":"Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners.","operationId":"getBusinessPartnersOutput","parameters":[{"name":"page","in":"query","description":"Number of page to get results from","required":false,"schema":{"minimum":0,"type":"string","default":"0"}},{"name":"size","in":"query","description":"Size of each page","required":false,"schema":{"maximum":100,"minimum":0,"type":"string","default":"10"}}],"requestBody":{"content":{"application/json":{"schema":{"type":"array","items":{"type":"string"}}}}},"responses":{"200":{"description":"The requested page of business partners","content":{"application/json":{"schema":{"required":["content","contentSize","page","totalElements","totalPages"],"type":"object","properties":{"totalElements":{"type":"integer","description":"Total number of all results in all pages","format":"int64"},"totalPages":{"type":"integer","description":"Total number pages","format":"int32"},"page":{"type":"integer","description":"Current page number","format":"int32"},"contentSize":{"type":"integer","description":"Number of results in the page","format":"int32"},"content":{"type":"array","description":"Collection of results in the page","items":{"required":["address","createdAt","externalId","identifiers","isOwnCompanyData","legalEntity","nameParts","roles","states","updatedAt"],"type":"object","properties":{"externalId":{"type":"string","description":"The identifier which uniquely identifies (in the internal system landscape of the sharing member) the business partner."},"nameParts":{"type":"array","description":"The list of name parts to accommodate the different number of name fields in different systems.","items":{"type":"string"}},"identifiers":{"type":"array","description":"The list of identifiers of the business partner. Sorted and duplicates removed by the service.","items":{"type":"object","properties":{"type":{"type":"string","description":"The type of the identifier."},"value":{"type":"string","description":"The value of the identifier like “DE123465789."},"issuingBody":{"type":"string","description":"The name of the official register, where the identifier is registered. For example, a Handelsregisternummer in Germany is only valid with its corresponding Registergericht and Registerart."}}}},"states":{"type":"array","description":"The list of (temporary) states of the business partner. Sorted and duplicates removed by the service.","items":{"type":"object","properties":{"validFrom":{"type":"string","description":"Date since when the status is/was valid.","format":"date-time"},"validTo":{"type":"string","description":"Date until the status was valid, if applicable.","format":"date-time"},"type":{"type":"string","description":"The type of this specified status.","enum":["ACTIVE","INACTIVE"]}}}},"roles":{"type":"array","description":"One or more of the roles, the business partner assumes with respect to the sharing member: Supplier, Customer. Sorted and duplicates removed by the service.","items":{"type":"string","enum":["SUPPLIER","CUSTOMER","ONE_TIME_SUPPLIER","ONE_TIME_CUSTOMER"]}},"isOwnCompanyData":{"type":"boolean","description":"Indicates whether the sharing member claims (in the initial upload) the business partner to belong to the company data of the sharing member."},"legalEntity":{"required":["bpnL","confidenceCriteria","legalEntityBpn","states"],"type":"object","properties":{"legalEntityBpn":{"type":"string","description":"The BPNL of the legal entity, on which the business partner provides a view."},"legalName":{"type":"string","description":"The name of the legal entity, on which the business partner provides a view, according to official registers."},"shortName":{"type":"string","description":"The abbreviated name of the legal entity, on which the business partner provides a view."},"legalForm":{"type":"string","description":"The legal form of the legal entity, on which the business partner provides a view."},"confidenceCriteria":{"required":["checkedByExternalDataSource","confidenceLevel","lastConfidenceCheckAt","nextConfidenceCheckAt","numberOfSharingMembers","sharedByOwner"],"type":"object","properties":{"sharedByOwner":{"type":"boolean"},"checkedByExternalDataSource":{"type":"boolean"},"numberOfSharingMembers":{"type":"integer","format":"int32"},"lastConfidenceCheckAt":{"type":"string","format":"date-time"},"nextConfidenceCheckAt":{"type":"string","format":"date-time"},"confidenceLevel":{"type":"integer","format":"int32"}}},"states":{"type":"array","items":{"type":"object","properties":{"validFrom":{"type":"string","description":"Date since when the status is/was valid.","format":"date-time"},"validTo":{"type":"string","description":"Date until the status was valid, if applicable.","format":"date-time"},"type":{"type":"string","description":"The type of this specified status.","enum":["ACTIVE","INACTIVE"]}}}}},"description":"Legal Entity properties of business partner output data"},"site":{"required":["confidenceCriteria","siteBpn","states"],"type":"object","properties":{"siteBpn":{"type":"string","description":"The BPNS of the site, on which the business partner provides a view."},"name":{"type":"string","description":"The name of the site, on which the business partner provides a view. This is not according to official registers but according to the name the owner chooses."},"confidenceCriteria":{"required":["checkedByExternalDataSource","confidenceLevel","lastConfidenceCheckAt","nextConfidenceCheckAt","numberOfSharingMembers","sharedByOwner"],"type":"object","properties":{"sharedByOwner":{"type":"boolean"},"checkedByExternalDataSource":{"type":"boolean"},"numberOfSharingMembers":{"type":"integer","format":"int32"},"lastConfidenceCheckAt":{"type":"string","format":"date-time"},"nextConfidenceCheckAt":{"type":"string","format":"date-time"},"confidenceLevel":{"type":"integer","format":"int32"}}},"states":{"type":"array","items":{"type":"object","properties":{"validFrom":{"type":"string","description":"Date since when the status is/was valid.","format":"date-time"},"validTo":{"type":"string","description":"Date until the status was valid, if applicable.","format":"date-time"},"type":{"type":"string","description":"The type of this specified status.","enum":["ACTIVE","INACTIVE"]}}}}},"description":"Site properties of business partner output data"},"address":{"required":["addressBpn","alternativePostalAddress","bpnA","confidenceCriteria","physicalPostalAddress","states"],"type":"object","properties":{"addressBpn":{"type":"string","description":"The BPNA of the address, on which the business partner provides a view."},"name":{"type":"string","description":"The name of the address, on which the business partner provides a view. This is not according to official registers but according to the name the sharing members agree on, such as the name of a gate or any other additional names that designate the address in common parlance."},"addressType":{"type":"string","description":"One of the address types: Legal Address, Site Main Address, Legal and Site Main Address, Additional Address. ","enum":["LegalAndSiteMainAddress","LegalAddress","SiteMainAddress","AdditionalAddress"]},"physicalPostalAddress":{"type":"object","properties":{"geographicCoordinates":{"required":["latitude","longitude"],"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"The exact location of the physical postal address in latitude, longitude, and altitude."},"country":{"type":"string","description":"The 2-digit country code of the physical postal address according to ISO 3166-1.","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"administrativeAreaLevel1":{"type":"string","description":"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."},"administrativeAreaLevel2":{"type":"string","description":"The name of the locally regulated secondary country subdivision of the physical postal address, such as county within a country."},"administrativeAreaLevel3":{"type":"string","description":"The name of the locally regulated tertiary country subdivision of the physical address, such as townships within a country."},"postalCode":{"type":"string","description":"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."},"city":{"type":"string","description":"The name of the city of the physical postal address, synonyms: town, village, municipality."},"district":{"type":"string","description":"The name of the district of the physical postal address which divides the city in several smaller areas."},"street":{"type":"object","properties":{"namePrefix":{"type":"string","description":"The street related information, which is usually printed before the official street name on an address label."},"additionalNamePrefix":{"type":"string","description":"The additional street related information, which is usually printed before the official street name on an address label."},"name":{"type":"string","description":"The name of the street."},"nameSuffix":{"type":"string","description":"The street related information, which is usually printed after the official street name on an address label."},"additionalNameSuffix":{"type":"string","description":"The additional street related information, which is usually printed after the official street name on an address label."},"houseNumber":{"type":"string","description":"The number representing the exact location of a building within the street."},"houseNumberSupplement":{"type":"string"},"milestone":{"type":"string","description":"The number representing the exact location of an addressed object within a street without house numbers, such as within long roads."},"direction":{"type":"string","description":"The cardinal direction describing where the exit to the location of the addressed object on large highways / motorways is located, such as Highway 101 South."}},"description":"The street of the physical postal address, synonyms: road, avenue, lane, boulevard, highway"},"companyPostalCode":{"type":"string","description":"The company postal code of the physical postal address, which is sometimes required for large companies."},"industrialZone":{"type":"string","description":"The industrial zone of the physical postal address, designating an area for industrial development, synonym: industrial area."},"building":{"type":"string","description":"The alphanumeric identifier of the building addressed by the physical postal address."},"floor":{"type":"string","description":"The number of a floor in the building addressed by the physical postal address, synonym: level."},"door":{"type":"string","description":"The number of a door in the building on the respective floor addressed by the physical postal address, synonyms: room, suite."}},"description":"A physical postal address describes the physical location of an office, warehouse, gate, etc."},"alternativePostalAddress":{"type":"object","properties":{"geographicCoordinates":{"required":["latitude","longitude"],"type":"object","properties":{"longitude":{"type":"number","description":"Longitude coordinate","format":"float"},"latitude":{"type":"number","description":"Latitude coordinate","format":"float"},"altitude":{"type":"number","description":"Altitude, if applicable","format":"float"}},"description":"The exact location of the physical postal address in latitude, longitude, and altitude."},"country":{"type":"string","description":"The 2-digit country code of the physical postal address according to ISO 3166-1.","enum":["UNDEFINED","AC","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR","AS","AT","AU","AW","AX","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ","BL","BM","BN","BO","BQ","BR","BS","BT","BU","BV","BW","BY","BZ","CA","CC","CD","CF","CG","CH","CI","CK","CL","CM","CN","CO","CP","CR","CS","CU","CV","CW","CX","CY","CZ","DE","DG","DJ","DK","DM","DO","DZ","EA","EC","EE","EG","EH","ER","ES","ET","EU","EZ","FI","FJ","FK","FM","FO","FR","FX","GA","GB","GD","GE","GF","GG","GH","GI","GL","GM","GN","GP","GQ","GR","GS","GT","GU","GW","GY","HK","HM","HN","HR","HT","HU","IC","ID","IE","IL","IM","IN","IO","IQ","IR","IS","IT","JE","JM","JO","JP","KE","KG","KH","KI","KM","KN","KP","KR","KW","KY","KZ","LA","LB","LC","LI","LK","LR","LS","LT","LU","LV","LY","MA","MC","MD","ME","MF","MG","MH","MK","ML","MM","MN","MO","MP","MQ","MR","MS","MT","MU","MV","MW","MX","MY","MZ","NA","NC","NE","NF","NG","NI","NL","NO","NP","NR","NT","NU","NZ","OM","PA","PE","PF","PG","PH","PK","PL","PM","PN","PR","PS","PT","PW","PY","QA","RE","RO","RS","RU","RW","SA","SB","SC","SD","SE","SF","SG","SH","SI","SJ","SK","SL","SM","SN","SO","SR","SS","ST","SU","SV","SX","SY","SZ","TA","TC","TD","TF","TG","TH","TJ","TK","TL","TM","TN","TO","TP","TR","TT","TV","TW","TZ","UA","UG","UK","UM","US","UY","UZ","VA","VC","VE","VG","VI","VN","VU","WF","WS","XI","XU","XK","YE","YT","YU","ZA","ZM","ZR","ZW"]},"administrativeAreaLevel1":{"type":"string","description":"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."},"postalCode":{"type":"string","description":"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."},"city":{"type":"string","description":"The name of the city of the physical postal address, synonyms: town, village, municipality."},"deliveryServiceType":{"type":"string","description":"One of the alternative postal address types: P.O. box, private bag, boite postale.","enum":["PO_BOX","PRIVATE_BAG","BOITE_POSTALE"]},"deliveryServiceQualifier":{"type":"string","description":"The qualifier uniquely identifying the delivery service endpoint of the alternative postal address in conjunction with the delivery service number. In some countries for example, entering a P.O. box number, postal code and city is not sufficient to uniquely identify a P.O. box, because the same P.O. box number is assigned multiple times in some cities."},"deliveryServiceNumber":{"type":"string","description":"The number indicating the delivery service endpoint of the alternative postal address to which the delivery is to be delivered, such as a P.O. box number or a private bag number."}},"description":"An alternative postal address describes an alternative way of delivery for example if the goods are to be picked up somewhere else."},"confidenceCriteria":{"required":["checkedByExternalDataSource","confidenceLevel","lastConfidenceCheckAt","nextConfidenceCheckAt","numberOfSharingMembers","sharedByOwner"],"type":"object","properties":{"sharedByOwner":{"type":"boolean"},"checkedByExternalDataSource":{"type":"boolean"},"numberOfSharingMembers":{"type":"integer","format":"int32"},"lastConfidenceCheckAt":{"type":"string","format":"date-time"},"nextConfidenceCheckAt":{"type":"string","format":"date-time"},"confidenceLevel":{"type":"integer","format":"int32"}}},"states":{"type":"array","items":{"type":"object","properties":{"validFrom":{"type":"string","description":"Date since when the status is/was valid.","format":"date-time"},"validTo":{"type":"string","description":"Date until the status was valid, if applicable.","format":"date-time"},"type":{"type":"string","description":"The type of this specified status.","enum":["ACTIVE","INACTIVE"]}}}}},"description":"Address properties of business partner output data"},"createdAt":{"type":"string","description":"The date when the data record has been created.","format":"date-time"},"updatedAt":{"type":"string","description":"The date when the data record has been last updated.","format":"date-time"}},"description":"Generic business partner output with external id"}}},"description":"Paginated collection of results"}}}},"400":{"description":"On malformed pagination request"}},"method":"post","path":"/v6/output/business-partners/search","servers":[{"url":"http://localhost:8081","description":"Generated server url"}],"jsonRequestBodyExample":["string"],"info":{"title":"Business Partner Data Management Gate","description":"A gate for a member to share business partner data with CatenaX","version":"6.0.0"},"postman":{"name":"Search business partners by an array of external IDs from the output stage","description":{"content":"Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners.","type":"text/plain"},"url":{"path":["v6","output","business-partners","search"],"host":["{{baseUrl}}"],"query":[{"disabled":false,"description":{"content":"Number of page to get results from","type":"text/plain"},"key":"page","value":""},{"disabled":false,"description":{"content":"Size of each page","type":"text/plain"},"key":"size","value":""}],"variable":[]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
sidebar_class_name: "post api-method"
info_path: docs-kits/kits/Business Partner Kit/Software Development View/Gate Api/business-partner-data-management-gate
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import TabItem from "@theme/TabItem";

## Search business partners by an array of external IDs from the output stage



Get page of business partners output data filtered by a collection of external IDs. An empty external ID list will return a paginated list of all business partners.

<details style={{"marginBottom":"1rem"}} data-collapsed={false} open={true}><summary style={{}}><strong>Query Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"page","in":"query","description":"Number of page to get results from","required":false,"schema":{"minimum":0,"type":"string","default":"0"}}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"size","in":"query","description":"Size of each page","required":false,"schema":{"maximum":100,"minimum":0,"type":"string","default":"10"}}}></ParamsItem></ul></div></details><MimeTabs><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Request Body</strong><span style={{"opacity":"0.6"}}> array</span></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><li><div><strong>string</strong></div></li></ul></details></TabItem></MimeTabs><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

The requested page of business partners

</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"totalElements"} required={false} deprecated={undefined} schemaDescription={"Total number of all results in all pages"} schemaName={"int64"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"totalPages"} required={false} deprecated={undefined} schemaDescription={"Total number pages"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"page"} required={false} deprecated={undefined} schemaDescription={"Current page number"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"contentSize"} required={false} deprecated={undefined} schemaDescription={"Number of results in the page"} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>content</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Collection of results in the page

</div><SchemaItem collapsible={false} name={"externalId"} required={false} deprecated={undefined} schemaDescription={"The identifier which uniquely identifies (in the internal system landscape of the sharing member) the business partner."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"nameParts"} required={false} deprecated={undefined} schemaDescription={"The list of name parts to accommodate the different number of name fields in different systems."} schemaName={"string[]"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>identifiers</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The list of identifiers of the business partner. Sorted and duplicates removed by the service.

</div><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"The type of the identifier."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"value"} required={false} deprecated={undefined} schemaDescription={"The value of the identifier like “DE123465789."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"issuingBody"} required={false} deprecated={undefined} schemaDescription={"The name of the official register, where the identifier is registered. For example, a Handelsregisternummer in Germany is only valid with its corresponding Registergericht and Registerart."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The list of (temporary) states of the business partner. Sorted and duplicates removed by the service.

</div><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Date since when the status is/was valid."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Date until the status was valid, if applicable."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"The type of this specified status."} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"roles"} required={false} deprecated={undefined} schemaDescription={"One or more of the roles, the business partner assumes with respect to the sharing member: Supplier, Customer. Sorted and duplicates removed by the service."} schemaName={"string[]"} qualifierMessage={"**Possible values:** [`SUPPLIER`, `CUSTOMER`, `ONE_TIME_SUPPLIER`, `ONE_TIME_CUSTOMER`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"isOwnCompanyData"} required={false} deprecated={undefined} schemaDescription={"Indicates whether the sharing member claims (in the initial upload) the business partner to belong to the company data of the sharing member."} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>legalEntity</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Legal Entity properties of business partner output data

</div><SchemaItem collapsible={false} name={"legalEntityBpn"} required={false} deprecated={undefined} schemaDescription={"The BPNL of the legal entity, on which the business partner provides a view."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"legalName"} required={false} deprecated={undefined} schemaDescription={"The name of the legal entity, on which the business partner provides a view, according to official registers."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"shortName"} required={false} deprecated={undefined} schemaDescription={"The abbreviated name of the legal entity, on which the business partner provides a view."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"legalForm"} required={false} deprecated={undefined} schemaDescription={"The legal form of the legal entity, on which the business partner provides a view."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>confidenceCriteria</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"sharedByOwner"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"checkedByExternalDataSource"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"numberOfSharingMembers"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"lastConfidenceCheckAt"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"nextConfidenceCheckAt"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"confidenceLevel"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Date since when the status is/was valid."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Date until the status was valid, if applicable."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"The type of this specified status."} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>site</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Site properties of business partner output data

</div><SchemaItem collapsible={false} name={"siteBpn"} required={false} deprecated={undefined} schemaDescription={"The BPNS of the site, on which the business partner provides a view."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"The name of the site, on which the business partner provides a view. This is not according to official registers but according to the name the owner chooses."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>confidenceCriteria</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"sharedByOwner"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"checkedByExternalDataSource"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"numberOfSharingMembers"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"lastConfidenceCheckAt"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"nextConfidenceCheckAt"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"confidenceLevel"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Date since when the status is/was valid."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Date until the status was valid, if applicable."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"The type of this specified status."} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>address</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Address properties of business partner output data

</div><SchemaItem collapsible={false} name={"addressBpn"} required={false} deprecated={undefined} schemaDescription={"The BPNA of the address, on which the business partner provides a view."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"The name of the address, on which the business partner provides a view. This is not according to official registers but according to the name the sharing members agree on, such as the name of a gate or any other additional names that designate the address in common parlance."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"addressType"} required={false} deprecated={undefined} schemaDescription={"One of the address types: Legal Address, Site Main Address, Legal and Site Main Address, Additional Address. "} schemaName={"string"} qualifierMessage={"**Possible values:** [`LegalAndSiteMainAddress`, `LegalAddress`, `SiteMainAddress`, `AdditionalAddress`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>physicalPostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

A physical postal address describes the physical location of an office, warehouse, gate, etc.

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The exact location of the physical postal address in latitude, longitude, and altitude.

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country code of the physical postal address according to ISO 3166-1."} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel2"} required={false} deprecated={undefined} schemaDescription={"The name of the locally regulated secondary country subdivision of the physical postal address, such as county within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel3"} required={false} deprecated={undefined} schemaDescription={"The name of the locally regulated tertiary country subdivision of the physical address, such as townships within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The name of the city of the physical postal address, synonyms: town, village, municipality."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"district"} required={false} deprecated={undefined} schemaDescription={"The name of the district of the physical postal address which divides the city in several smaller areas."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>street</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The street of the physical postal address, synonyms: road, avenue, lane, boulevard, highway

</div><SchemaItem collapsible={false} name={"namePrefix"} required={false} deprecated={undefined} schemaDescription={"The street related information, which is usually printed before the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"additionalNamePrefix"} required={false} deprecated={undefined} schemaDescription={"The additional street related information, which is usually printed before the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={false} deprecated={undefined} schemaDescription={"The name of the street."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"nameSuffix"} required={false} deprecated={undefined} schemaDescription={"The street related information, which is usually printed after the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"additionalNameSuffix"} required={false} deprecated={undefined} schemaDescription={"The additional street related information, which is usually printed after the official street name on an address label."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"houseNumber"} required={false} deprecated={undefined} schemaDescription={"The number representing the exact location of a building within the street."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"houseNumberSupplement"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"milestone"} required={false} deprecated={undefined} schemaDescription={"The number representing the exact location of an addressed object within a street without house numbers, such as within long roads."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"direction"} required={false} deprecated={undefined} schemaDescription={"The cardinal direction describing where the exit to the location of the addressed object on large highways / motorways is located, such as Highway 101 South."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"companyPostalCode"} required={false} deprecated={undefined} schemaDescription={"The company postal code of the physical postal address, which is sometimes required for large companies."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"industrialZone"} required={false} deprecated={undefined} schemaDescription={"The industrial zone of the physical postal address, designating an area for industrial development, synonym: industrial area."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"building"} required={false} deprecated={undefined} schemaDescription={"The alphanumeric identifier of the building addressed by the physical postal address."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"floor"} required={false} deprecated={undefined} schemaDescription={"The number of a floor in the building addressed by the physical postal address, synonym: level."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"door"} required={false} deprecated={undefined} schemaDescription={"The number of a door in the building on the respective floor addressed by the physical postal address, synonyms: room, suite."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>alternativePostalAddress</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

An alternative postal address describes an alternative way of delivery for example if the goods are to be picked up somewhere else.

</div><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>geographicCoordinates</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The exact location of the physical postal address in latitude, longitude, and altitude.

</div><SchemaItem collapsible={false} name={"longitude"} required={false} deprecated={undefined} schemaDescription={"Longitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"latitude"} required={false} deprecated={undefined} schemaDescription={"Latitude coordinate"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"altitude"} required={false} deprecated={undefined} schemaDescription={"Altitude, if applicable"} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"country"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country code of the physical postal address according to ISO 3166-1."} schemaName={"string"} qualifierMessage={"**Possible values:** [`UNDEFINED`, `AC`, `AD`, `AE`, `AF`, `AG`, `AI`, `AL`, `AM`, `AN`, `AO`, `AQ`, `AR`, `AS`, `AT`, `AU`, `AW`, `AX`, `AZ`, `BA`, `BB`, `BD`, `BE`, `BF`, `BG`, `BH`, `BI`, `BJ`, `BL`, `BM`, `BN`, `BO`, `BQ`, `BR`, `BS`, `BT`, `BU`, `BV`, `BW`, `BY`, `BZ`, `CA`, `CC`, `CD`, `CF`, `CG`, `CH`, `CI`, `CK`, `CL`, `CM`, `CN`, `CO`, `CP`, `CR`, `CS`, `CU`, `CV`, `CW`, `CX`, `CY`, `CZ`, `DE`, `DG`, `DJ`, `DK`, `DM`, `DO`, `DZ`, `EA`, `EC`, `EE`, `EG`, `EH`, `ER`, `ES`, `ET`, `EU`, `EZ`, `FI`, `FJ`, `FK`, `FM`, `FO`, `FR`, `FX`, `GA`, `GB`, `GD`, `GE`, `GF`, `GG`, `GH`, `GI`, `GL`, `GM`, `GN`, `GP`, `GQ`, `GR`, `GS`, `GT`, `GU`, `GW`, `GY`, `HK`, `HM`, `HN`, `HR`, `HT`, `HU`, `IC`, `ID`, `IE`, `IL`, `IM`, `IN`, `IO`, `IQ`, `IR`, `IS`, `IT`, `JE`, `JM`, `JO`, `JP`, `KE`, `KG`, `KH`, `KI`, `KM`, `KN`, `KP`, `KR`, `KW`, `KY`, `KZ`, `LA`, `LB`, `LC`, `LI`, `LK`, `LR`, `LS`, `LT`, `LU`, `LV`, `LY`, `MA`, `MC`, `MD`, `ME`, `MF`, `MG`, `MH`, `MK`, `ML`, `MM`, `MN`, `MO`, `MP`, `MQ`, `MR`, `MS`, `MT`, `MU`, `MV`, `MW`, `MX`, `MY`, `MZ`, `NA`, `NC`, `NE`, `NF`, `NG`, `NI`, `NL`, `NO`, `NP`, `NR`, `NT`, `NU`, `NZ`, `OM`, `PA`, `PE`, `PF`, `PG`, `PH`, `PK`, `PL`, `PM`, `PN`, `PR`, `PS`, `PT`, `PW`, `PY`, `QA`, `RE`, `RO`, `RS`, `RU`, `RW`, `SA`, `SB`, `SC`, `SD`, `SE`, `SF`, `SG`, `SH`, `SI`, `SJ`, `SK`, `SL`, `SM`, `SN`, `SO`, `SR`, `SS`, `ST`, `SU`, `SV`, `SX`, `SY`, `SZ`, `TA`, `TC`, `TD`, `TF`, `TG`, `TH`, `TJ`, `TK`, `TL`, `TM`, `TN`, `TO`, `TP`, `TR`, `TT`, `TV`, `TW`, `TZ`, `UA`, `UG`, `UK`, `UM`, `US`, `UY`, `UZ`, `VA`, `VC`, `VE`, `VG`, `VI`, `VN`, `VU`, `WF`, `WS`, `XI`, `XU`, `XK`, `YE`, `YT`, `YU`, `ZA`, `ZM`, `ZR`, `ZW`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"administrativeAreaLevel1"} required={false} deprecated={undefined} schemaDescription={"The 2-digit country subdivision code according to ISO 3166-2, such as a region within a country."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"postalCode"} required={false} deprecated={undefined} schemaDescription={"The alphanumeric identifier (sometimes including spaces or punctuation) of the physical postal address for the purpose of sorting mail, synonyms:postcode, post code, PIN or ZIP code."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={false} deprecated={undefined} schemaDescription={"The name of the city of the physical postal address, synonyms: town, village, municipality."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceType"} required={false} deprecated={undefined} schemaDescription={"One of the alternative postal address types: P.O. box, private bag, boite postale."} schemaName={"string"} qualifierMessage={"**Possible values:** [`PO_BOX`, `PRIVATE_BAG`, `BOITE_POSTALE`]"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceQualifier"} required={false} deprecated={undefined} schemaDescription={"The qualifier uniquely identifying the delivery service endpoint of the alternative postal address in conjunction with the delivery service number. In some countries for example, entering a P.O. box number, postal code and city is not sufficient to uniquely identify a P.O. box, because the same P.O. box number is assigned multiple times in some cities."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"deliveryServiceNumber"} required={false} deprecated={undefined} schemaDescription={"The number indicating the delivery service endpoint of the alternative postal address to which the delivery is to be delivered, such as a P.O. box number or a private bag number."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>confidenceCriteria</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"sharedByOwner"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"checkedByExternalDataSource"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"boolean"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"numberOfSharingMembers"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"lastConfidenceCheckAt"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"nextConfidenceCheckAt"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"confidenceLevel"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>states</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"validFrom"} required={false} deprecated={undefined} schemaDescription={"Date since when the status is/was valid."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"validTo"} required={false} deprecated={undefined} schemaDescription={"Date until the status was valid, if applicable."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} deprecated={undefined} schemaDescription={"The type of this specified status."} schemaName={"string"} qualifierMessage={"**Possible values:** [`ACTIVE`, `INACTIVE`]"} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"createdAt"} required={false} deprecated={undefined} schemaDescription={"The date when the data record has been created."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"updatedAt"} required={false} deprecated={undefined} schemaDescription={"The date when the data record has been last updated."} schemaName={"date-time"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"totalElements\": 0,\n  \"totalPages\": 0,\n  \"page\": 0,\n  \"contentSize\": 0,\n  \"content\": [\n    {\n      \"externalId\": \"string\",\n      \"nameParts\": [\n        \"string\"\n      ],\n      \"identifiers\": [\n        {\n          \"type\": \"string\",\n          \"value\": \"string\",\n          \"issuingBody\": \"string\"\n        }\n      ],\n      \"states\": [\n        {\n          \"validFrom\": \"2024-05-15\",\n          \"validTo\": \"2024-05-15\",\n          \"type\": \"ACTIVE\"\n        }\n      ],\n      \"roles\": [\n        \"SUPPLIER\"\n      ],\n      \"isOwnCompanyData\": true,\n      \"legalEntity\": {\n        \"legalEntityBpn\": \"string\",\n        \"legalName\": \"string\",\n        \"shortName\": \"string\",\n        \"legalForm\": \"string\",\n        \"confidenceCriteria\": {\n          \"sharedByOwner\": true,\n          \"checkedByExternalDataSource\": true,\n          \"numberOfSharingMembers\": 0,\n          \"lastConfidenceCheckAt\": \"2024-05-15\",\n          \"nextConfidenceCheckAt\": \"2024-05-15\",\n          \"confidenceLevel\": 0\n        },\n        \"states\": [\n          {\n            \"validFrom\": \"2024-05-15\",\n            \"validTo\": \"2024-05-15\",\n            \"type\": \"ACTIVE\"\n          }\n        ]\n      },\n      \"site\": {\n        \"siteBpn\": \"string\",\n        \"name\": \"string\",\n        \"confidenceCriteria\": {\n          \"sharedByOwner\": true,\n          \"checkedByExternalDataSource\": true,\n          \"numberOfSharingMembers\": 0,\n          \"lastConfidenceCheckAt\": \"2024-05-15\",\n          \"nextConfidenceCheckAt\": \"2024-05-15\",\n          \"confidenceLevel\": 0\n        },\n        \"states\": [\n          {\n            \"validFrom\": \"2024-05-15\",\n            \"validTo\": \"2024-05-15\",\n            \"type\": \"ACTIVE\"\n          }\n        ]\n      },\n      \"address\": {\n        \"addressBpn\": \"string\",\n        \"name\": \"string\",\n        \"addressType\": \"LegalAndSiteMainAddress\",\n        \"physicalPostalAddress\": {\n          \"geographicCoordinates\": {\n            \"longitude\": 0,\n            \"latitude\": 0,\n            \"altitude\": 0\n          },\n          \"country\": \"UNDEFINED\",\n          \"administrativeAreaLevel1\": \"string\",\n          \"administrativeAreaLevel2\": \"string\",\n          \"administrativeAreaLevel3\": \"string\",\n          \"postalCode\": \"string\",\n          \"city\": \"string\",\n          \"district\": \"string\",\n          \"street\": {\n            \"namePrefix\": \"string\",\n            \"additionalNamePrefix\": \"string\",\n            \"name\": \"string\",\n            \"nameSuffix\": \"string\",\n            \"additionalNameSuffix\": \"string\",\n            \"houseNumber\": \"string\",\n            \"houseNumberSupplement\": \"string\",\n            \"milestone\": \"string\",\n            \"direction\": \"string\"\n          },\n          \"companyPostalCode\": \"string\",\n          \"industrialZone\": \"string\",\n          \"building\": \"string\",\n          \"floor\": \"string\",\n          \"door\": \"string\"\n        },\n        \"alternativePostalAddress\": {\n          \"geographicCoordinates\": {\n            \"longitude\": 0,\n            \"latitude\": 0,\n            \"altitude\": 0\n          },\n          \"country\": \"UNDEFINED\",\n          \"administrativeAreaLevel1\": \"string\",\n          \"postalCode\": \"string\",\n          \"city\": \"string\",\n          \"deliveryServiceType\": \"PO_BOX\",\n          \"deliveryServiceQualifier\": \"string\",\n          \"deliveryServiceNumber\": \"string\"\n        },\n        \"confidenceCriteria\": {\n          \"sharedByOwner\": true,\n          \"checkedByExternalDataSource\": true,\n          \"numberOfSharingMembers\": 0,\n          \"lastConfidenceCheckAt\": \"2024-05-15\",\n          \"nextConfidenceCheckAt\": \"2024-05-15\",\n          \"confidenceLevel\": 0\n        },\n        \"states\": [\n          {\n            \"validFrom\": \"2024-05-15\",\n            \"validTo\": \"2024-05-15\",\n            \"type\": \"ACTIVE\"\n          }\n        ]\n      },\n      \"createdAt\": \"2024-05-15\",\n      \"updatedAt\": \"2024-05-15\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"400"} value={"400"}><div>

On malformed pagination request

</div><div></div></TabItem></ApiTabs></div>
      